Add core functionality for Stack Overflow Java analysis project
- Implement data collection from Stack Overflow API
- Create data models: Question, Answer, Comment
- Develop data analysis services for topic trends, co-occurrence, multithreading pitfalls, and solvability
- Add RESTful API endpoints for data initialization and analysis results
- Include sample data generation for testing purposes
- Configure application properties and dependencies
- Create start scripts for easy application launch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=FinalProject_demo
-# server.port=8080
+server.port=8080
+
+# Thymeleaf configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Jackson configuration
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Logging
+logging.level.cs209a.finalproject_demo=DEBUG
+logging.level.org.springframework.web=INFO
